--- a/public/html/index.html
+++ b/public/html/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+
   <link rel="stylesheet" href="../css/style.css" />
   <title>Don't know yet</title>
 </head>
@@ -48,48 +49,107 @@
 
 
   <!-- Trung - Dashboard page -->
-  
-  <header class="fixed-top container-fluid bg-dark text-light mb-5 p-3">
+
+  <!-- <header class="fixed-top container-fluid bg-dark text-light mb-5 p-3">
     <div class="d-flex align-items-center">
       <h1>Dashboard</h1>
-      <h3 class="ms-auto">
+      <h2 class="ms-auto">
         UNIFIEDGG
-      </h3>
+      </h2>
     </div>
-  </header>
+  </header> -->
 
-  <!-- left div -->
-  
-  <!-- <div class="row">
-    <div class="column left" >
-      <h2>Friends</h2>
-      <p>Some text..</p>
-    </div>
-    <div class="column middle" >
-      <h2>Chat</h2>
-      <p>Some text..</p>
-    </div>
-    <div class="column right">
-      <h2>Created Group</h2>
-      <p>Some text..</p>
-    </div>
-  </div> -->
-
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
-      <div class="col">
-        <h3>Friends</h3>
-      </div>
-      <div class="col-6">
+
+      <!-- Chat -->
+      <div id="chat" class="col-10">
         <h3>Chat</h3>
       </div>
-      <div class="col">
-        <h3>Group</h3>
+
+      <!-- Group -->
+      <div id="group" class="col">
+        <h3 id="group_name">Group Name</h3>
+        
+        <!-- select a game dropdown list -->
+        <div class="dropdown">
+          <button class="btn-vertical btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Select a Game
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+            <li><button class="dropdown-item" type="button">Valorant</button></li>
+            <li><button class="dropdown-item" type="button">CSGO</button></li>
+            <li><button class="dropdown-item" type="button">Destiny</button></li>
+            <li><button class="dropdown-item" type="button">LoL</button></li>
+          </ul>
+        </div>
+
+        <!-- select platform dropdown list -->
+        <div class="dropdown">
+          <button class="btn-vertical btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Select a Platform
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+            <li><button class="dropdown-item" type="button">PC</button></li>
+            <li><button class="dropdown-item" type="button">PS</button></li>
+            <li><button class="dropdown-item" type="button">Xbox</button></li>
+          </ul>
+        </div>
+
+        <!-- select region dropdown list -->
+        <div class="dropdown">
+          <button class="btn-vertical btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Select a Region
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+            <li><button class="dropdown-item" type="button">Oceania</button></li>
+            <li><button class="dropdown-item" type="button">North America</button></li>
+            <li><button class="dropdown-item" type="button">South America</button></li>
+            <li><button class="dropdown-item" type="button">Asia</button></li>
+            <li><button class="dropdown-item" type="button">Africa</button></li>
+            <li><button class="dropdown-item" type="button">Europe</button></li>
+          </ul>
+        </div>
+
+
+        <!-- select no player dropdown list -->
+        <div class="dropdown">
+          <button class="btn-vertical btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            No Players
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+            <li><button class="dropdown-item" type="button">1</button></li>
+            <li><button class="dropdown-item" type="button">2</button></li>
+            <li><button class="dropdown-item" type="button">3</button></li>
+            <li><button class="dropdown-item" type="button">4</button></li>
+            <li><button class="dropdown-item" type="button">5</button></li>
+            <li><button class="dropdown-item" type="button">6</button></li>
+          </ul>
+        </div>
+
+        <div class="mb-3">
+        
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"placeholder="Please add more info to your group post so people know what you're looking for! (i.e. mic required etc)"></textarea>
+        </div>
+
+        <!-- Button -->
+        <button type="button" class="btn btn-primary" id = "post_button">POST GROUP</button>
+
+
       </div>
     </div>
   </div>
 
-  <script src=""></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
