--- a/public/html/index.html
+++ b/public/html/index.html
@@ -69,67 +69,46 @@
 
       <!-- Group -->
       <div id="group" class="col">
-        <h3 id="group_name">Group Name</h3>
+        <h3 id="group_name">Create Group</h3>
         
         <!-- select a game dropdown list -->
-        <div class="dropdown">
-          <button class="btn-vertical btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Select a Game
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-            <li><button class="dropdown-item" type="button">Valorant</button></li>
-            <li><button class="dropdown-item" type="button">CSGO</button></li>
-            <li><button class="dropdown-item" type="button">Destiny</button></li>
-            <li><button class="dropdown-item" type="button">LoL</button></li>
-          </ul>
-        </div>
+        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+          <option selected>Select a Game</option>
+          <option value="1">Valorant</option>
+          <option value="2">CSGO</option>
+          <option value="3">Destiny</option>
+          <option value="4">LoL</option>
+        </select>
 
         <!-- select platform dropdown list -->
-        <div class="dropdown">
-          <button class="btn-vertical btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Select a Platform
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-            <li><button class="dropdown-item" type="button">PC</button></li>
-            <li><button class="dropdown-item" type="button">PS</button></li>
-            <li><button class="dropdown-item" type="button">Xbox</button></li>
-          </ul>
-        </div>
+        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+          <option selected>Select a Platform</option>
+          <option value="1">PC</option>
+          <option value="2">PS</option>
+          <option value="3">Xbox</option>
+        </select>
 
         <!-- select region dropdown list -->
-        <div class="dropdown">
-          <button class="btn-vertical btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Select a Region
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-            <li><button class="dropdown-item" type="button">Oceania</button></li>
-            <li><button class="dropdown-item" type="button">North America</button></li>
-            <li><button class="dropdown-item" type="button">South America</button></li>
-            <li><button class="dropdown-item" type="button">Asia</button></li>
-            <li><button class="dropdown-item" type="button">Africa</button></li>
-            <li><button class="dropdown-item" type="button">Europe</button></li>
-          </ul>
-        </div>
-
+        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+          <option selected>Select a Region</option>
+          <option value="1">Oceania</option>
+          <option value="2">North America</option>
+          <option value="3">South America</option>
+          <option value="4">Asia</option>
+          <option value="5">Africa</option>
+          <option value="6">europe</option>
+        </select>
 
         <!-- select no player dropdown list -->
-        <div class="dropdown">
-          <button class="btn-vertical btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            No Players
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-            <li><button class="dropdown-item" type="button">1</button></li>
-            <li><button class="dropdown-item" type="button">2</button></li>
-            <li><button class="dropdown-item" type="button">3</button></li>
-            <li><button class="dropdown-item" type="button">4</button></li>
-            <li><button class="dropdown-item" type="button">5</button></li>
-            <li><button class="dropdown-item" type="button">6</button></li>
-          </ul>
-        </div>
+        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+          <option selected>Select a Region</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+        </select>
 
         <div class="mb-3">
         
@@ -147,9 +126,9 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
 </body>
 
 </html>
